# facet-inspect

./: CHANGELOG.md  Cargo.toml  README.md  README.md.in
.github/workflows/: test.yml
src/: diff.rs  inspect.rs  lib.rs
