[package]
name = "facet-inspect"
version = "0.28.0"
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet-inspect"
description = "Allows inspecting types that implement Facet"
keywords = ["reflection", "introspection", "facet", "peek", "poke"]
categories = ["development-tools", "rust-patterns"]

[dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = [
    "user-hooks",
] }
facet = { version = "0.28.0" }
facet-reflect = { version = "0.28.0" }
